# mathprog-wrapper-exploration

./: .gitmodules  CMakeLists.txt  Readme.md  demo.py  example.cpp
pybind/: CMakeLists.txt  expressions.cpp
pybind/src/: CMakeLists.txt  demo.py  expressions.cpp
src/: expressions.h
swig/: CMakeLists.txt  demo.py  expressions.i
